Removed MaxPermSize test option